src/main/java/com/example/itss/util/error/FomatException.java
package com.example.itss.util.error;

public class FomatException extends RuntimeException  {
    public FomatException( String message) {
        super( message);
    }
}
